# fiddling-with-sensors

ArduTimer/: Makefile  TestBuzzer.ino
ArduTimerFRP/: ArduTimerFRP.cabal  Makefile  stack.yaml
ArduTimerFRP/src/: Main.hs
GrovePiRuby/: grove.rb  test_sinatra.rb
HomeMeteo/: main.py
LCD_temp/: LCD_temp.ino  Makefile
Motion_sensor/: Makefile  Motion_sensor.ino
TempHumidServerPy/: main.py
TestBuzzer/: Makefile  TestBuzzer.ino
TestGesturePAJ7620/: Makefile  main.ino
pseudoTheremin/: Makefile  main.ino  synth.ck
test-copilot/: Main.ino  Makefile  stack.yaml  test-copilot.cabal
test-copilot/app/: Main.hs
test-copilot/src/: Lib.hs
